fix wrapping for sortable accordion titles

--- a/src/assets/scss/customizer/controls/_sortable-accordion.scss
+++ b/src/assets/scss/customizer/controls/_sortable-accordion.scss
@@ -66,6 +66,7 @@
 			.title {
 				overflow: hidden;
 				text-overflow: ellipsis;
+				white-space: pre;
 			}
 			.title-divider {
 				padding-left: 5px;
